--- a/WabiSabiTeamProject/Feature/LaunchScreen/View/Base.lproj/LaunchScreen.storyboard
+++ b/WabiSabiTeamProject/Feature/LaunchScreen/View/Base.lproj/LaunchScreen.storyboard
@@ -31,7 +31,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="                               " cornerStyle="capsule">
                                     <backgroundConfiguration key="background" strokeWidth="3" strokeOutset="3">
-                                        <color key="strokeColor" systemColor="systemBackgroundColor"/>
+                                        <color key="strokeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </backgroundConfiguration>
                                     <fontDescription key="titleFontDescription" type="system" weight="heavy" pointSize="34"/>
                                     <color key="baseBackgroundColor" systemColor="tertiarySystemFillColor"/>
@@ -43,7 +43,7 @@
                                     <constraint firstAttribute="width" constant="200" id="cFZ-rO-svl"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="34"/>
-                                <color key="textColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -70,9 +70,6 @@
         <namedColor name="ColorCream">
             <color red="0.88999998569488525" green="0.80800002813339233" blue="0.77300000190734863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="tertiarySystemFillColor">
             <color red="0.46274509803921571" green="0.46274509803921571" blue="0.50196078431372548" alpha="0.12" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
