--- a/WabiSabiTeamProject/Feature/Summary/View/SummaryActivity/SummaryActivityCircularProgressTableViewCell.xib
+++ b/WabiSabiTeamProject/Feature/Summary/View/SummaryActivity/SummaryActivityCircularProgressTableViewCell.xib
@@ -24,7 +24,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="sdb-jn-WM9">
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="sdb-jn-WM9">
                         <rect key="frame" x="15" y="32" width="290" height="322"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4CV-aV-upO">
