--- a/WabiSabiTeamProject/Feature/Activity/View/Base.lproj/Main.storyboard
+++ b/WabiSabiTeamProject/Feature/Activity/View/Base.lproj/Main.storyboard
@@ -435,10 +435,28 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eCE-dj-mCB">
                                 <rect key="frame" x="14" y="150" width="90" height="90"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DefaultProfilePicture" translatesAutoresizingMaskIntoConstraints="NO" id="mYu-9S-7qi">
+                                        <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="90" id="ABq-Fv-GK6"/>
+                                            <constraint firstAttribute="height" constant="90" id="Z5E-3H-0Sp"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="50"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" name="ColorSecondary"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="0cU-am-ksN"/>
+                                    <constraint firstAttribute="bottom" secondItem="mYu-9S-7qi" secondAttribute="bottom" id="LkD-wm-1d6"/>
+                                    <constraint firstAttribute="trailing" secondItem="mYu-9S-7qi" secondAttribute="trailing" id="OXk-EN-INL"/>
+                                    <constraint firstItem="mYu-9S-7qi" firstAttribute="top" secondItem="eCE-dj-mCB" secondAttribute="top" id="aTZ-gO-je3"/>
                                     <constraint firstAttribute="width" constant="90" id="l17-gH-B2f"/>
+                                    <constraint firstItem="mYu-9S-7qi" firstAttribute="leading" secondItem="eCE-dj-mCB" secondAttribute="leading" id="zhs-RP-3Jt"/>
                                 </constraints>
                             </view>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="3TS-xc-4MV">
@@ -636,10 +654,10 @@
                                                                                                         <nil key="highlightedColor"/>
                                                                                                     </label>
                                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jWO-zL-9H9">
-                                                                                                        <rect key="frame" x="10" y="87" width="63" height="23"/>
+                                                                                                        <rect key="frame" x="10" y="87" width="67.333333333333329" height="23"/>
                                                                                                         <subviews>
                                                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="~ 10 mins" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Rc-BQ-Xze">
-                                                                                                                <rect key="frame" x="5" y="3.6666666666666705" width="53" height="15.666666666666664"/>
+                                                                                                                <rect key="frame" x="5.0000000000000036" y="3.6666666666666705" width="57.333333333333343" height="15.666666666666664"/>
                                                                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                                                 <fontDescription key="fontDescription" name="SFProRounded-Regular" family="SF Pro Rounded" pointSize="13"/>
                                                                                                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -827,6 +845,7 @@
         <segue reference="a5f-ho-4TD"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="DefaultProfilePicture" width="90" height="90"/>
         <image name="Tutorial1" width="187" height="53"/>
         <image name="Tutorial2" width="228" height="73"/>
         <image name="Tutorial3" width="247" height="73"/>
