--- a/WabiSabiTeamProject/Feature/OnBoarding/View/OnBoarding.storyboard
+++ b/WabiSabiTeamProject/Feature/OnBoarding/View/OnBoarding.storyboard
@@ -1441,7 +1441,7 @@ products that you usually use later.</string>
         <!--Skin Type View Controller-->
         <scene sceneID="qfI-nc-iKU">
             <objects>
-                <viewController id="KZD-TS-ezw" customClass="SkinTypeViewController" customModule="WabiSabiTeamProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SkinTypeDetail" id="KZD-TS-ezw" customClass="SkinTypeViewController" customModule="WabiSabiTeamProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7Py-xn-oFT">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
